# koffee

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  properdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/cuda/: Dockerfile  Dockerfile-cuda  devcontainer.json
.devcontainer/default/: Dockerfile  Dockerfile-default  devcontainer.json
.github/: dependabot.yml
.github/actions/setup-ffmpeg/: action.yml
.github/workflows/: ci-web.yml  ci.yaml  dependabot.yml  docs.yaml
cli/: index.html
docs/: cli.md  getting-started.md  index.md  koffee.md
examples/: video_translation_example.py
examples/subtitles/: sample_srt_file.srt  sample_vtt_file.vtt
features/: api.feature  environment.py  exceptions.feature
features/steps/: api.py
flask/: app.py
flask/templates/: index.html
getting-started/: index.html
koffee/: __init__.py  _retry.py  api.py  asr.py  cli.py  embed.py  exceptions.py  overlay.py  subtitle.py  translate.py  translator.py
koffee/cli/: __init__.py  __main__.py  app.py  commands.py  embedded.py  progress.py
koffee/data/: config.py
koffee/llm/: _protocol.py  chatgpt.py  claude.py  gemini.py  ollama.py
koffee/schemas/: config.py  types.py
koffee/utils/: __init__.py  ass_converter.py  get_video_duration.py  srt_converter.py  subtitle_extractor.py  subtitle_parser.py  timestamp_converter.py  vtt_converter.py
search/: search_index.json
src/koffee/: __init__.py  asr.py  cli.py  exceptions.py  overlay.py  subtitle.py  translate.py  translator.py
src/koffee-web/: .gitignore  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/koffee-web/src/: App.test.tsx  App.tsx  vite.config.test.ts
src/koffee-web/src/components/: DropZone.test.tsx  DropZone.tsx
src/koffee-web/src/lib/: audio.ts  ffmpeg.test.ts  ffmpeg.ts  languages.ts  subtitles.test.ts  subtitles.ts  types.ts  workerFactory.ts
src/koffee-web/src/workers/: translate.worker.test.ts  translate.worker.ts  whisper.worker.test.ts  whisper.worker.ts
src/koffee-web/tests/: subtitles.test.ts
src/koffee/data/: config.py
src/koffee/llm/: __init__.py  chatgpt.py  claude.py  gemini.py
src/koffee/utils/: __init__.py  ass_converter.py  convert_json_to_srt.py  get_video_duration.py  md5_checksum.py  srt_converter.py  subtitle_extractor.py  subtitle_parser.py  text_to_srt_converter.py  timestamp_converter.py  vtt_converter.py
tests/: __init__.py  test_api.py  test_asr.py  test_cli.py  test_config.py  test_embed.py  test_koffee.py  test_overlay.py  test_retry.py  test_srt_converter.py  test_subtitle.py  test_subtitle_extractor.py  test_subtitle_parser.py  test_timestamp.py  test_translator.py  test_video_duration.py  test_videos.py
