[project]
name = "koffee"
version = "0.1.0"
description = "A Korean<>English video file translator."
authors = [
    {name = "Kim, Andrew", email = "andrewkimka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "faster-whisper>=1.0.3",
    "torch>=2.2.2",
    "accelerate>=0.29.3",
    "cyclopts>=4.11.0",
    "rich>=15.0.0",
    "pydantic>=2.13.3",
    "av>=17.0.1",
    "google-genai>=1.73.1",
    "openai>=2.32.0",
    "anthropic>=0.96.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.11",
    "behave>=1.2.6",
    "pre-commit>=4.6.0",
    "nox>=2026.4.10",
    "ty>=0.0.32",
]
docs = [
    "cyclopts[mkdocs]>=4.11.0",
    "mkdocs-material>=9.7.6",
]

[project.scripts]
koffee = "koffee.cli:main"

[tool.coverage.run]
branch = true
source = ["koffee"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
    "B",    # bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # pyflakes
    "FLY",  # f-strings
    "I",    # isort
    "PERF", # performance
    "PL",   # pylint-like
    "PTH",  # pathlib
    "RUF",  # ruff-specific
    "SIM",  # simplify
    "UP",   # pyupgrade
]


lint.ignore = [
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition
]

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
