[project]
name = "koffee"
version = "0.1.0"
description = "A Korean<>English video file translator."
authors = [
    {name = "Kim, Andrew", email = "andrewkimka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "faster-whisper>=1.0.3",
    "torch>=2.12.1",
    "accelerate>=1.14.0",
    "cyclopts>=4.19.0",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "av>=17.1.0",
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "anthropic>=0.112.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "pytest>=9.1.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.19",
    "behave>=1.2.6",
    "pre-commit>=4.6.0",
    "nox>=2026.4.10",
    "ty>=0.0.53",
]
docs = [
    "cyclopts[mkdocs]>=4.19.0",
    "mkdocs-material>=9.7.6",
]

[project.scripts]
koffee = "koffee.cli:main"

[tool.coverage.run]
branch = true
source = ["koffee"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
    "B",    # bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # pyflakes
    "FLY",  # f-strings
    "I",    # isort
    "PERF", # performance
    "PL",   # pylint-like
    "PTH",  # pathlib
    "RUF",  # ruff-specific
    "SIM",  # simplify
    "UP",   # pyupgrade
]


lint.ignore = [
    "PLR0913", # Too many arguments in function definition
]

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
